@startuml

title Class diagram for design pattern Facade

class State {
    -String name
    -int stateId
    -List<int> districts
}

class District {
    -String name
    -int districtID
    -int belongsToState
    -List<int> settlements
}


class Settlement {
    -String name
    -int settlementId
    -int belongsToDistrict
    -int settlementType
}

class Citizen {
    -String name
    -int citizenID
    -int permanentStay
    -List<int> previousStay
}

class Citizens {
    -Map<int, Citizen> citizens
}

class CitizenInfoFacade {
    -AdministrativeUnits administrativeUnits
    -Citizenes citizens

    +CitizenInfoDTO getFullCitizenInfo(int citizenID);
}

class CitizenInfoDTO {
    -String name
    -String permanentStay,
    -String district
    -String state
}

class AdministrativeUnits {
    -Map<id, State> states
    -Map<id, District> districts
    -Map<id, Settlement> settlements
}

class DataAccessor {

}

State o-- District
District o-- Settlement

Citizens o--Citizen
AdministrativeUnits o-- State
AdministrativeUnits o-- District
AdministrativeUnits o-- Settlement
Citizen -- Settlement

DataAccessor o-- CitizenInfoFacade
CitizenInfoDTO -- CitizenInfoFacade
CitizenInfoFacade o-- Citizens
CitizenInfoFacade o-- AdministrativeUnits



@enduml